Styled Navbar: aligned Home,Privacy and login buttons, added hover effects. Fixed scrollbar issue and adjusted page layout for consistent appearance.

--- a/AQI Monitoring System/wwwroot/css/site.css
+++ b/AQI Monitoring System/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
   font-size: 14px;
+  overflow-y: scroll; /* scrollbar always visible */
 }
 
 @media (min-width: 768px) {
@@ -21,30 +22,28 @@ body {
   margin-bottom: 60px;
 }
 .navbar {
-  background-color:#c5d7f2 !important;
+  background-color:#1e3a8a !important;
   padding: 15px 20px;
 }
 
 .navbar-brand {
-  color: black !important;
+  color: #e0e0e0 !important;
 }
 
-
-
 .nav-link {
-  color: rgba(0, 0, 0, 0.6) !important; /* Reduced opacity */
+  color: rgba(244,244,244,0.6) !important; /* Reduced opacity */
   text-decoration: none; /* Remove underline */
   font-size: 18px;
   /*font-weight: bold;*/
   margin-right: 20px; /* Space between links */
   padding: 5px 10px; /* Padding inside each link for better click area */
   transition: color 0.3s ease; /* Add a smooth color transition */
-  font-weight: 500;
+  font-weight: 400;
 }
 
 /* On hover, increase opacity */
 .nav-link:hover {
-  color: rgba(0, 0, 0, 1)!important; /* Full opacity on hover */
+  color: #ffffff!important; /* Full opacity on hover */
 }
 
 /* On the login page, set full opacity */
@@ -56,5 +55,12 @@ body.login-page .nav-link {
 .nav-link:last-child {
   margin-right: 0; /* Remove margin for the last link */
 }
+
+.navbar-nav .nav-link.active {
+  color:white !important;
+  font-weight: 600;
+}
+
+
 
 
